# ROSITurtlebot

./: .gitignore  README.md
lr_ppo/: package.xml  setup.cfg  setup.py
lr_ppo/config/: ppo_params.yaml  training_params.yaml
lr_ppo/launch/: evaluate.launch.py  ppo_training.launch.py  train.launch.py
lr_ppo/lr_ppo/: collision_checker.py  evaluator.py  gym_env.py  movement_tester.py  observation_vector.py  ppo_agent.py  ppo_trainer.py  reward_function.py  trainer.py
lr_turtlebot_sim/: package.xml  setup.cfg  setup.py
lr_turtlebot_sim/launch/: maze_world.launch.py
lr_turtlebot_sim/lr_turtlebot_sim/: maze_simulator.py  spawn_robot.py  test_spawn.py
lr_turtlebot_sim/worlds/: maze1.world  maze2.world  maze3.world
